@@ -1,6 +1,7 @@
 Release Notes
 
 * 4/13/2016
+  * changed resume/pauseTask to  activate/throttle jobs
   * fixed JG for pending tasks to release lock
   * fixed dump in ThreadUtils
   * imporved AtlasAJB to work with includedSite=''
